# rational_mathematics

./: .gitignore  CMakeLists.txt  Double.cpp  Double.h  abstr_digit.h  fraction.cpp  fraction.h  irracional.cpp  irracional.h  main.cpp
